# RiceCall

./: .env.example  .gitignore  .prettierrc  .stylelintrc.json  Cargo.toml  README.md  TESTING_GUIDELINES.md  api.service.ts  auth.service.ts  crowdin.yml  data.service.ts  db.js  db.service.ts  discord.ts  electron-builder-dev.json  electron-builder.json  env.ts  global.d.ts  i18n.ts  index.js  index.ts  jest.config.js  main.js  main.ts  next.config.ts  package.json  popupLoader.ts  preload.js  schema.sql  socket.ts  tsconfig.electron.json  tsconfig.json
__tests__/: _testSetup.ts
config/: index.ts
database/: backup-db.js  config.json  index.js  index.ts  restore-db.js  setup-db.js
db/: index.ts
docs/: REFACTORING_GUIDELINES.md  WEBSOCKET_RECONNECTION_FIX.md  WEBSOCKET_RECONNECTION_FIX_ZH.md  b86f9e8af1852772c5bd7b45b14d1dda55871bab_changelog.md  changelog_naming_convention.md  css-naming-convention.md
main/: auth.service.ts  i18n.ts  main.ts  socket.ts
middleware/: auth.validator.ts
schemas/: schema.sql
scripts/: deleteNonWebp.ts  generate-popup-imports.ts  sort-json.cjs  transferImageToWebp.ts  webp-to-svg.mjs
services/: login.service.ts  register.service.ts  user.service.ts
socket/: channel.js  friend.js  friendApplication.js  friendGroup.js  index.js  member.js  memberApplication.js  message.js  rtc.js  server.js  user.js
src/: action.ts  api.service.ts  api.ts  auth.service.ts  auth.token.ts  auth.ts  constant.ts  contextMenu.ts  country.ts  data.ipc.ts  data.service.ts  data.ts  discord.ts  emojis.ts  env.ts  error.ts  font.ts  global.d.ts  (+17 more)
(+1296 files in other folders)
